# fluxo_criativo

./: .env.example  .gitignore  CLAUDE.md  PROTOCOLO-EDICAO-APP-FRONT.md  README.md  assinatura-docustoaolucro.html  assinatura-rodrigohaertel.html  guia-instalacao-mac.html  guia-instalacao-windows.html  mover-carrossel.ps1  mover-imagens.ps1  package-lock.json  sync-cowork-plugin.ps1  sync-cowork-plugin.py  vtsd_cv_processed.json  workshop-live-office.html
.claude/: launch.json
.claude-plugin/: marketplace.json
.claude/commands/: ads-relatorio.md  copy-anuncio.md  criar-aplicativo-analise-ads.md  criativo-estatico.md  dono14-diario.md  enviar-relatorio-ads.md  gerar-token-permanente-facebook-ads.md  meta-conexao.md  obter-id-conta-anuncios.md  produto-concepcao.md  produto-novo.md  trafego-analise.md  (+8 more)
Prompt dos Criativos/: carrossel-amo-revisado.md  carrossel-erros-revisado.md  carrossel-ninguem-conta-revisado.md  carrossel-nunca-revisado.md  carrossel-odeio-revisado.md  carrossel-sempre-revisado.md  prompt_anuncios_estaticos_1.md
painel/: index.html  skeleton-painel-entregas.html
scripts/: atualizar-segunda.ps1  atualizar-utms-leitura10x.py  criar-anuncios-leitura10x.py  criar-campanha-leitura10x.py  dividir-fonte.py  dono14-dashboard.py  dono14-diario.py  dono14-teste-criativos.py  gerar-criativo-estatico.py  gerar-zona-segura-reels.py  migrar-criativos-stories.py  painel-incremental.py  painel_template.py  reinjetar-confirmacao-chatgpt.py  transcrever-youtube.py  trocar-api-por-openrouter.py
scripts/trafego-analysis/: CHANGELOG.md  CODE_OF_CONDUCT.md  install.sh  pyproject.toml
scripts/trafego-analysis/tests/: test_comparativo.py
scripts/trafego-analysis/trafego_analysis/: __init__.py
scripts/trafego-analysis/trafego_analysis/analyses/: auditoria_campanha.py  checkout_analise.py  conta_health.py  criativos_comparativo.py  criativos_taxonomia.py  cross_canal.py  escalabilidade.py  fases_funil.py  funil_waterfall.py  pausa_hierarquica.py  plano_executivo.py  prospeccao_retargeting.py  top_performers.py
scripts/trafego-analysis/trafego_analysis/config_defaults/: benchmarks_br.json  limiares_fadiga.json
scripts/trafego-analysis/trafego_analysis/config_defaults/fases_templates/: perpetuo_6_fases.json  tofu_mofu_bofu.json
scripts/trafego-analysis/trafego_analysis/config_defaults/perfis_templates/: lancamento.json  perpetuo.json
scripts/trafego-analysis/trafego_analysis/core/: baseline.py  cache.py  config.py
scripts/trafego-analysis/trafego_analysis/pages/: 1_Campanhas.py  3_Funil.py  4_Cross_Canal.py  5_Conta.py  7_Configuracoes.py
scripts/trafego-analysis/trafego_analysis/templates/: advantage_plus.md.j2  alertas.md.j2  auditoria.md.j2  caixa_rapido.md.j2  comparativo.md.j2  cross_canal.md.j2  dayparting.md.j2  demo_base.md.j2  demo_d6.md.j2  escalabilidade.md.j2  fases.md.j2  funil.md.j2  mandala.md.j2  projecao.md.j2  prospeccao_retargeting.md.j2
(+592 files in other folders)
